--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.9.3",
     "ng2-charts": "^2.3.0",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
