--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@angular/common": "~13.0.0",
     "@angular/compiler": "~13.0.0",
     "@angular/core": "~13.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
-    "chart.js": "^2.9.3",
-    "ng2-charts": "^2.3.0",
+    "chart.js": "^2.9.4",
+    "firebase": "^9.22.0",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.2.1",
     "tslib": "^2.3.0",
