--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.4.6",
-    "typescript": "~4.8.4"
+    "typescript": "^4.9.5"
   }
 }
